remove small font-size from small buttons to fix icon centering, and make them more legible

--- a/packages/core/src/components/button/_common.scss
+++ b/packages/core/src/components/button/_common.scss
@@ -423,5 +423,4 @@ $button-intents: (
 @mixin pt-button-small() {
   @include pt-button-height($pt-button-height-small);
   padding: $button-padding-small;
-  font-size: $pt-font-size-small;
 }
